# cwgan-gp-fruits

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  config.py  pyproject.toml  requirements.txt  train_classifier.py  train_gan.py
models/: classifier.py  gan.py
notebooks/: gan_image_gen_quickstart.ipynb
scripts/: generate_synth.py  plot_results.py  run_experiments.py
tests/: test_models.py
